--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ https://open.spotify.com/track/05UNmC5kz7I34gfrpFPmNR?si=9019d0f8d9d64ecd
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content=":3">
+    <meta property="og:description" content="endo was hereeee >.<">
     <title></title>
     <style>
         html, body {
