--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ https://open.spotify.com/track/05UNmC5kz7I34gfrpFPmNR?si=9019d0f8d9d64ecd
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content=":3">
-    <meta property="og:description" content="sk33t.club">
+    <meta property="og:description" content="skeetless nn $$">
     <title></title>
     <style>
         html, body {
